--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -56,17 +56,87 @@ $button-border: lightblue;
     width: calc(100vw - 300px);
     .main-header {
       height: 100px;
-      padding: 0 40px;
+      padding: 0 40px 0;
+      display: flex;
+      justify-content: space-between;
+      .current-room {
+        font-size: 24px;
+        color: #333;
+        margin-top: 36px;
+      }
+      .delete-area {
+        margin-top: 40px;
+        .delete-button {
+          color: darkred;
+          padding: 20px;
+          border: 1px solid darkred;
+          text-decoration: none;
+        }
+      }
     }
     .main-field {
       background-color: $light-gray;
       height: calc(100vh - (100px + 90px));
       padding: 46px 40px 0;
+      overflow: scroll;
+      .message {
+        margin-bottom: 40px;
+        .message-info {
+          display: flex;
+          padding: 10px 0 10px;
+          .user-info {
+            margin-right: 10px;
+            font-size: 16px;
+            color: #434A54;
+          }
+          .message-time {
+            font-size: 12px;
+            color: #999;
+          }
+        }
+        .message-content {
+          font-size: 14px;
+          color: #434A54;
+        }
+      }
     }
-    .main-post {
+    .form {
+      background-color: #DDDDDD;
       height: 90px;
-      background-color: $midium-gray;
-      padding: 20px 40px 20px;
+      padding: 20px 40px;
+      display: flex;
+      .form-input {
+         background-color: white;
+         display: flex;
+         width: 100%;
+         .form-message {
+            border: none;
+            height: 50px;
+            width: 100%;
+            padding-left: 10px;
+         }
+         .form-image {
+            font-size: 12px;
+            background-color: lightblue;
+            color: white;
+            padding: 12px;
+            width: 60px;
+            margin: 5px 10px;
+            text-align: center;
+            .hidden {
+              display: none;
+            }
+         }
+      }
+      .form-submit {
+         background-color: #38AEF0;
+         border: none;
+         color: white;
+         font-size: 16px;
+         height: 50px;
+         margin-left: 15px;
+         padding: 0 20px;
+      }
     }
   }
 }
