--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -9,6 +9,7 @@
       </a>
     </div>
   </div>
+
   <div class="main-field">
     <div class="message">
       <div class="message-info">
@@ -115,14 +116,14 @@
       </div>
     </div>
   </div>
-  <div class="form">
-    <div class="form-input">
-      <input class="form-message" placeholder="type a message">
-      <label class="form-image">
-        <span class="image-file">画像</span>
-        <input type="file" class="hidden">
-      </label>
-    </div>
-    <input class="form-submit" type="submit" value="送信">
+
+  <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+  <div class="form-input">
+    <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <%= f.file_field :image, class: 'hidden' %>
+    </label>
   </div>
-</div>
+  <%= f.submit '送信', class: 'form-submit' %>
+  <% end %>
