メッセージの表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -11,110 +11,7 @@
   </div>
 
   <div class="main-field">
-    <div class="message">
-      <div class="message-info">
-        <div class="user-info">
-          Tom
-        </div>
-        <div class="message-time">
-          2020/3/31(Wed)12:43:30
-        </div>
-      </div>
-      <div class="message-content">
-        おはよう
-      </div>
-    </div>
-    <div class="message">
-      <div class="message-info">
-        <div class="user-info">
-          Tom
-        </div>
-        <div class="message-time">
-          2020/3/31(Wed)12:43:30
-        </div>
-      </div>
-      <div class="message-content">
-        元気？
-      </div>
-    </div>
-    <div class="message">
-      <div class="message-info">
-        <div class="user-info">
-          Tom
-        </div>
-        <div class="message-time">
-          2020/3/31(Wed)12:43:30
-        </div>
-      </div>
-      <div class="message-content">
-        元気？
-      </div>
-    </div>
-    <div class="message">
-      <div class="message-info">
-        <div class="user-info">
-          Tom
-        </div>
-        <div class="message-time">
-          2020/3/31(Wed)12:43:30
-        </div>
-      </div>
-      <div class="message-content">
-        元気？
-      </div>
-    </div>
-    <div class="message">
-      <div class="message-info">
-        <div class="user-info">
-          Tom
-        </div>
-        <div class="message-time">
-          2020/3/31(Wed)12:43:30
-        </div>
-      </div>
-      <div class="message-content">
-        元気？
-      </div>
-    </div>
-    <div class="message">
-      <div class="message-info">
-        <div class="user-info">
-          Tom
-        </div>
-        <div class="message-time">
-          2020/3/31(Wed)12:43:30
-        </div>
-      </div>
-      <div class="message-content">
-        元気？
-      </div>
-    </div>
-    <div class="message">
-      <div class="message-info">
-        <div class="user-info">
-          Tom
-        </div>
-        <div class="message-time">
-          2020/3/31(Wed)12:43:30
-        </div>
-      </div>
-      <div class="message-content">
-        元気？
-      </div>
-    </div>
-    <div class="message">
-      <div class="message-info">
-        <div class="user-info">
-          Tom
-        </div>
-        <div class="message-time">
-          2020/3/31(Wed)12:43:30
-        </div>
-      </div>
-      <div class="message-content">
-        元気？
-      </div>
-    </div>
+    <%= render partial: "message", collection: @messages %>
   </div>
 
   <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
