--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="main-container">
   <div class="main-header">
     <div class="current-room">
-      Techroom1
+      <%= @room.name %>
     </div>
     <div class="delete-area">
       <a class="delete-button" href="#">
