--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -4,9 +4,7 @@
       <%= @room.name %>
     </div>
     <div class="delete-area">
-      <a class="delete-button" href="#">
-        チャットを終了する
-      </a>
+      <%= link_to "チャットを終了する", room_path(@room), method: :delete, class: "delete-button" %>
     </div>
   </div>
 
